--- a/Egzaminy/INF03/inf03_2024_styczen_3/rozwiazanie/plikizrozwiazaniem/uslugi.html
+++ b/Egzaminy/INF03/inf03_2024_styczen_3/rozwiazanie/plikizrozwiazaniem/uslugi.html
@@ -10,7 +10,7 @@
     <div class="container">
         <header>
             <section class="logo">
-                <img src="logo.png" alt="firma it">
+                <img class="obrazek" src="logo.png" alt="firma it">
             </section>
             <nav class="menu">
                 <a href="index.html">Strona Główna</a>
@@ -22,12 +22,17 @@
             <img src="animacja.gif" alt="Usługi informatyczne">
         </section>
         <main>
-            <h2>Firma IT</h2>
-            <p>Jesteśmy firmą z wieloletnim doświadczeniem w zakresie IT.</p>
+            <h2>Oferta</h2>
+            <ol>
+                <li>Outsourcing IT</li>
+                <li>Konfiguracja komputerów</li>
+                <li>Sprzęt komputerowy</li>
+                <li>Strony internetowe</li>
+            </ol>
             <hr>
         </main>
         <footer>
-            <p>Autor strony: <strong>NaukaOdZera</strong></p>
+            <p>Autor strony: <strong>123456</strong></p>
         </footer>
     </div>
 </body>
